feat: traducción del footer con i18n

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -113,7 +113,6 @@
       "contact": "Contact Me"
     },
     "contactTitle": "Let's work together!",
-    "top": "Go top",
-    "copy": "Elian Bertre. All rights reserved."
+    "top": "Go top"
   }
 }
