--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -116,7 +116,6 @@
       "contact": "Contáctame"
     },
     "contactTitle": "¡Trabajemos juntos!",
-    "top": "Ir arriba",
-    "copy": "Elian Bertre. Todos los derechos reservados."
+    "top": "Ir arriba"
   }
 }
