feat: traducción del la página de contacto com i18n
- Cambio en la funcion de i18n.js para soportar traducción de placeholders
- Cambio del botón de cambio de idioma para mostrar el idioma al que se cambiará
- Agregar las traducciones (en/es) en los archivos JSON correspondientes.

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -119,5 +119,21 @@
     },
     "contactTitle": "Let's work together!",
     "top": "Go top"
+  },
+
+
+  "contact": {
+    "title": "Contact Me",
+    "subtitle": "The best way to start something great is with a conversation. Write to me and let's talk about how we can shape your ideas.",
+    "form": {
+      "nameLabel": "Name",
+      "namePlaceholder": "Full Name",
+      "emailLabel": "Email",
+      "emailPlaceholder": "Email",
+      "messageLabel": "Message",
+      "messagePlaceholder": "Message",
+      "sendButton": "Send"
+    }
   }
+
 }
